# hydro

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  LICENSE-3RD-PARTY  README.md  c_flag_overrides.cmake  cxx_flag_overrides.cmake
examples/: .gitignore  general.hydroconf  plot  plotcmp  plotp
examples/broken_dam_2d/: broken_dam_2d.hydroconf  start.hydroconf
examples/broken_dam_3d/: broken_dam_3d.add.hydroconf  broken_dam_3d.hydroconf  start.hydroconf
examples/cavity/: .gitignore  cavity.hydroconf  exp.iter_history.plt  run  start.hydroconf
examples/cavity/ref/: section_vertial_velocity.csv  section_vertial_velocity.plt
examples/cavity/sample/: README.md  exp.field.0.vts  exp.iter_history.plt
examples/coal3d/: job  mfer.add.hydroconf  par.hydroconf  param  plot  run  submit
examples/epfl/: Makefile  clean  kill  mfer.add.hydroconf  mfer.hydroconf  par.hydroconf  param  plot
examples/mixing/: mfer.add.hydroconf  mfer.hydroconf  plot
examples/mixing3d/: mfer.add.hydroconf  run
examples/mixing3d/daint/: mfer.add.hydroconf  par.hydroconf  run
examples/mixingimg/: .gitignore  genimg  mfer.add.hydroconf  mfer.hydroconf  plot
examples/mortazavi/: Makefile  clean  cleanpic  kill  mfer.add.hydroconf  mfer.hydroconf  par.hydroconf  param  plot  run  start.hydroconf
examples/mortazavi/res/: README.md  xvx  xy
examples/mortazavi3d/: par.hydroconf  param  plot  run
examples/mortazavi3d/ref/: xu  xz
examples/reaction/: start.hydroconf
examples/reaction_2d/: reaction_2d.add.hydroconf  reaction_2d.hydroconf  start.hydroconf
examples/reaction_3d/: reaction_3d.add.hydroconf  reaction_3d.hydroconf  start.hydroconf
examples/rt/: mfer.add.hydroconf  mfer.hydroconf  par.hydroconf  plot
examples/rtimg/: clean  mfer.add.hydroconf  mfer.hydroconf
examples/vortimg/: .gitignore  genimg  mfer.hydroconf  plot  plotu
lib/tecio/include/: TECXXX.h
lib/tecio/lib/: tecio.lib
source/: main.cpp  revision.cpp  revision.hpp  test.cpp  test.hpp  todo.hpp
source/common/: common.cpp  common.hpp  data_structures.hpp  defs.hpp  linear_algebra.cpp  linear_algebra.hpp  linear_algebra_ext.cpp  linear_algebra_ext.hpp  std_ref.hpp  vect.hpp
source/control/: console.cpp  console.hpp  experiment.cpp  experiment.hpp  experiment_ref.cpp  logger.hpp  metrics.hpp  module.cpp  parameters.hpp  pvar.cpp  pvar.hpp
source/heat_storage_module/: heat_storage_module.cpp  heat_storage_module.hpp
source/hydro2dmpi/: advection.hpp  chemistry.hpp  conv_diff.hpp  fluid.hpp  heat.hpp  hydro2d.cpp  hydro2d.hpp  hydro3d.cpp  linear.hpp  mesh.cpp  mesh.hpp  mesh1d.cpp  mesh1d.hpp  mesh2d.cpp  mesh2d.hpp  mesh3d.cpp  mesh3d.hpp  output.cpp  output.hpp  output_paraview.hpp  output_tecplot.hpp  parallel.hpp  solver.hpp
source/test_module/: test_module.cpp  test_module.hpp
test/: conf  confdeb
test/benchmark/: CMakeLists.txt  main.cpp
tools/: revision.cpp  update_git_rev.sh
tools/local_run/: local_clean.sh  local_run.sh  local_stop.sh
